# spring-practicum-2025-diaandfriends

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  main.cpp  main_test.cpp  testing.txt
src/: compressor.cpp  compressor.h  decompressor.cpp  decompressor.h  frequencyCounter.cpp  frequencyCounter.h  hashing.cpp  hashing.h  head.cpp  head.h  huffman.cpp  huffman.h  readFile.cpp  readFile.h  treeConverter.cpp  treeConverter.h
